--- a/Mousie1031/Content/bootstrap.css
+++ b/Mousie1031/Content/bootstrap.css
@@ -314,8 +314,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #333333;
-  background-color: #ffffff;
+  color: #e1dddd;
+  background-color: #dfdddd;
 }
 
 input,
@@ -4934,7 +4934,7 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: #000000;
 }
 
 .jumbotron h1 {
